Add the function that create type stack table

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.89"
+byteorder = "1.5.0"
+camino = "1.1.9"
 clap = { version = "4.5.20", features = ["derive"] }
+env_logger = "0.11.5"
+log = "0.4.22"
+wasmparser = "0.219.0"
