--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,6 @@ clap = { version = "4.5.20", features = ["derive"] }
 csv = "1.3.1"
 env_logger = "0.11.5"
 log = "0.4.22"
+strum = "0.26.3"
+strum_macros = "0.26.4"
 wasmparser = "0.219.0"
