--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ cmp = "0.1.0"
 csv = "1.3.1"
 env_logger = "0.11.5"
 log = "0.4.22"
+rmp-serde = "1.3.0"
+serde = { version = "1.0.219", features = ["derive"] }
 strum = "0.26.3"
 strum_macros = "0.26.4"
 wasmparser = { git = "https://github.com/funera1/wasm-tools", branch = "feature/display-operator" }
