--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ clap = { version = "4.5.20", features = ["derive"] }
 cmp = "0.1.0"
 csv = "1.3.1"
 env_logger = "0.11.5"
+indexmap = "2.9.0"
 log = "0.4.22"
 rmp-serde = "1.3.0"
 serde = { version = "1.0.219", features = ["derive"] }
