Introduce the Walrus crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ strum = "0.26.3"
 strum_macros = "0.26.4"
 wasmparser = { git = "https://github.com/funera1/wasm-tools", branch = "feature/display-operator" }
 wasm-encoder = { git = "https://github.com/funera1/wasm-tools", branch = "feature/display-operator" }
+walrus = "0.17"
 
 [build-dependencies]
 prost-build = "0.12"
