--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ strum = "0.26.3"
 strum_macros = "0.26.4"
 wasmparser = { git = "https://github.com/funera1/wasm-tools", branch = "feature/display-operator" }
 wasm-encoder = { git = "https://github.com/funera1/wasm-tools", branch = "feature/display-operator" }
-walrus = "0.17"
+walrus = { git = "https://github.com/funera1/walrus" }
 
 [build-dependencies]
 prost-build = "0.12"
